--- a/index.html
+++ b/index.html
@@ -47,6 +47,24 @@
 			<dt>Asker</dt>
 				<dd class="asker"></dd>
 		</dl>
+
+		<dl class="result answerers">
+			<dt>User</dt>
+				<dd class="answerers-text"><a href="" target="_blank"></a></dd>
+			<dt>Profile Image</dt>
+				<dd class="profileimage"><img src="" alt=""></dd>
+
+			<dt>Accept Rate</dt>
+				<dd class="accept-rate"></dd>
+
+			<dt>Reputation</dt>
+				<dd class="reputation"></dd>	
+			<dt>Score</dt>
+				<dd class="score"></dd>	
+			<dt>Post count</dt>
+				<dd class="postcount"></dd>
+
+		</dl>
 		<div class="error">
 			<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
 		</div>
